# flipper_games

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  build_flipper_application.sh
.github/workflows/: main.yml
blackjack/: application.fam  blackjack.c  card.c  card.h  defines.h  screens.h  ui.c  ui.h  util.c  util.h
builds/: blackjack_vanilla_rc_0.69.0.fap  unleashed_blackjack.fap  unleashed_solitaire.fap  vanilla_blackjack.fap  vanilla_solitaire.fap
common/: card.c  card.h  dml.c  dml.h  menu.c  menu.h  queue.h  ui.c  ui.h
common/engine/: game_engine.c  game_engine.h  objects.c  objects.h
common/engine/util/: list.c  list.h  physics.h
faker/: README.md  blackjack_icons.h  jumper_icons.h  pinball_icons.h  solitaire_icons.h
graphics/: solitaire_main.aseprite
jumper/: application.fam  defines.h  jumper.c  notifications.h
pinball/: application.fam  defines.h  pinball.c
solitaire/: application.fam  defines.h  solitaire.c
